@@ -1,5 +1,6 @@
 Changelog for Shake
 
+    Fix AssumeClean when the result exists but has never been built
     IMPORTANT: Incompatible on disk format change
     Change the storage to not write messages on --silent
     Add Applicative on Rules
